Fixes display of animated work item covers on mobile

--- a/new/css/style.css
+++ b/new/css/style.css
@@ -523,7 +523,7 @@ section {
     display: none;
   }
 
-  .works li article .square > * {
+  .works li article .square:first-child > * {
     position: relative;
     top: 0;
     left: 0;
